--- a/src/components/StandsList/StandItem/StandItem.module.css
+++ b/src/components/StandsList/StandItem/StandItem.module.css
@@ -1,3 +1,9 @@
+a {
+    list-style: none;
+    text-decoration: none;
+    color: black;
+}
+
 .standItem {
     display: flex;
 
@@ -8,6 +14,14 @@
     list-style: none;
     border: 2px solid cadetblue;
     border-radius: 10px;
+}
+
+.standItem:hover {
+    background-color: #a6cccd;
+}
+
+.standItem:active {
+    background-color: cadetblue;
 }
 
 .standImage {
@@ -26,4 +40,12 @@
 .standImage,
 .standName {
     align-self: center;
+}
+
+.description {
+    opacity: 0;
+}
+
+.standItem:hover .standName .description {
+    opacity: 0.7;
 }
