--- a/src/components/StandsList/StandItem/StandItem.module.css
+++ b/src/components/StandsList/StandItem/StandItem.module.css
@@ -7,7 +7,7 @@ a {
 .standItem {
     display: flex;
 
-    margin: 4px 4px;
+    margin: 4px;
     padding: 5px 10px;
     width: 300px;
 
@@ -25,8 +25,8 @@ a {
 }
 
 .standImage {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height:40px;
 
     margin-right: 10px;
 
