--- a/src/components/StandsList/StandsList.module.css
+++ b/src/components/StandsList/StandsList.module.css
@@ -1,5 +1,16 @@
+.containerStandList {
+    width: 67%;
+}
+
+h1 {
+    font-size: 22px;
+    margin: 10px 0 0 5px;
+    font-weight: normal;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
-
+    margin: 0 0 20px 0;
+    padding: 0;
 }
