--- a/src/components/DownloadVisitors/DownloadVisitor.module.css
+++ b/src/components/DownloadVisitors/DownloadVisitor.module.css
@@ -3,13 +3,21 @@
     justify-content: space-around;
     max-width: 700px;
 
-    margin: 0 auto 60px;
+    margin: 60px auto;
 }
 
 .button {
     width: 200px;
-    height: 70px;
+    height: 50px;
+    line-height: 50px;
     text-align: center;
+    background-color: #C4C4C4;
+    border: none;
+    border-radius: 10px;
+}
+
+.button:hover {
+    background-color: #a1a1a1;
 }
 
 p {
