--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -1,7 +1,8 @@
 .mainPage {
     display: flex;
     flex-direction: column;
-    margin: 0 20px;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .container {
