--- a/src/components/StandsList/StandsList.module.css
+++ b/src/components/StandsList/StandsList.module.css
@@ -1,7 +1,3 @@
-.containerStandList {
-    width: 67%;
-}
-
 h1 {
     font-size: 22px;
     margin: 10px 0 0 5px;
@@ -9,8 +5,14 @@ h1 {
 }
 
 .container {
+    margin-bottom: 40px;
+}
+
+.containerStandList {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 0 20px 0;
+    margin: 0;
     padding: 0;
+    /*max-height: 640px;*/
+    /*overflow: scroll;*/
 }
